--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Single Page Website Editor",
   "main": "index.js",
   "scripts": {
-    "eslint": "eslint --fix lib editor",
+    "clean": "npx rimraf *.js *.js.map lib/*.js lib/*.js.map editor/*.js editor/*.js.map",
     "start": "electron .",
-    "test": "npm run test"
+    "tsc": "tsc --project .",
+    "tslint": "tslint --fix --project ."
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,14 @@
   },
   "homepage": "https://github.com/FrankDeGroot/spwe#readme",
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "@types/fs-extra": "^5.0.4",
+    "@types/globby": "^8.0.0",
+    "@types/http-server": "^0.10.0",
+    "@types/simplemde": "^1.11.7",
     "preact-material-components": "^1.5.0",
-    "prettier": "^1.14.2"
+    "rimraf": "^2.6.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "electron": "^2.0.7",
